--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root{
+    --globalnav-backdrop-filter: saturate(180%) blur(20px);
+    --globalnav-background: rgba(250, 250, 252, .8);
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    
+}
