--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,121 +1,89 @@
-
-.container{
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1200px;
-    overflow: hidden;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root{
+  --color-1: #0f1016;
+  --text-color: #f0f0f0;
+  --accent-color: #006aff;
 }
-
-.hero{
-    background-color: grey;
-    
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.nav{
-    --state-close: scale(0);
-    --state-hamburguer:scale(1);
-    --state-menu: translate(-100%);
-
-    padding: 20px 0;
-    display: grid;
-    justify-content: space-between;
-    align-items: center;
-    grid-template-columns: repeat(2, max-content);
+html{
+  font-size: 12pt;
+  font-family: Poppins, Segoe UI, Tahoma, sans-serif;
 }
-
-.nav:target{
-    --state-menu: translate(0);
-    --state-close: scale(1);
-    --state-hamburguer:scale(0);
+nav{
+  height: 60px;
+  background-color: var(--color-1);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
-
-.nav__logo{
-    z-index: 1;
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2rem;
-    letter-spacing: 2px;
-
+.links-container{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-
-h2{
-    align-items: center;
+nav a{
+  height: 100%;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: var(--text-color);
 }
-
-.nav__hamburguer, 
-.nav__close{
-    cursor: pointer;
-    grid-column: -2/-1;
-    grid-row: 1/2;
-    transition: .4s transform;
+nav a:hover{
+  background-color: var(--accent-color);
 }
-
-.nav__hamburguer{
-    transform: var(--state-hamburguer);
+nav .home-link{
+  margin-right: auto;
 }
-
-.nav__close{
-    transform: var(--state-close);
+nav svg{
+  fill: var(--text-color);
 }
-
-.nav__icon{
-    width: 40px;
+#sidebar-active{
+  display: none;
 }
+.open-sidebar-button, .close-sidebar-button{
+  display: none;
+}
+@media(max-width: 450px){
+  .links-container{
+    flex-direction: column;
+    align-items: flex-start;
 
-.nav__links{
-    background-color: #000;
-    position: absolute;
+    position: fixed;
     top: 0;
-    bottom: 0;
-    left: 0;
+    right: -100%;
+    z-index: 10;
+    width: 300px;
+
+    background-color: var(--color-1);
+    box-shadow: -5px 0 5px rgba(0, 0, 0, 0.25);
+    transition: 0.75s ease-out;
+  }
+  nav a{
+    box-sizing: border-box;
+    height: auto;
+    width: 100%;
+    padding: 20px 30px;
+    justify-content: flex-start;
+  }
+  .open-sidebar-button, .close-sidebar-button{
+    padding: 20px;
+    display: block;
+  }
+  #sidebar-active:checked ~ .links-container{
     right: 0;
-    padding: 0;
-
-    display: grid;
-    align-content: center;
-    gap: 2em;
-    padding-left: 5%;
-
-    transform: var(--state-menu);
-    transition: .3s transform;
-}
-
-.nav__item{
-    list-style: none;
-}
-
-.nav__link{
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2rem;
-    letter-spacing: 2px;
-}
-
-@media (min-width:768px) {
-    .nav{
-        --state-hamburguer:scale(0);
-        --state-menu: translate(0);
-    }
-    
-    .nav:target{
-        --state-close: scale(0);
-    }
-
-    .nav__links{
-        padding: 0;
-        background-color: unset;
-        position: unset;
-        gap: 1.5em;
-        grid-auto-flow: column;
-    
-        transform: unset;
-
-        grid-column: -2/-1;
-        grid-row: 1/2;
-    }
-
-    .nav__link{
-        font-size: 1rem;
-        letter-spacing: none;
-    }
+  }
+  #sidebar-active:checked ~ #overlay{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
+  }
 }
