--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="hero">
+<!-- <header class="hero"> 
     <nav id="nav" class="nav container">
         <h2 class="nav__logo"><a [routerLink]="['/']" class="nav__link">CirOS</a></h2>
         <ul class="nav__links">
@@ -12,8 +12,32 @@
             <img src="../../../assets/img/menu.svg" alt="" class="nav__icon">
         </a>
     
-        <a href="#" class="nav__close">
+        <input type="checkbox" class="nav__close">
             <img src="../../../assets/img/close.svg" alt="" class="nav__icon">
-        </a>
     </nav>
-</header>
+</header> -->
+
+<body>
+    <nav>
+      <input type="checkbox" id="sidebar-active">
+      <label for="sidebar-active" class="open-sidebar-button">
+        <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+      </label>
+      <label id="overlay" for="sidebar-active"></label>
+      <div class="links-container">
+        <label for="sidebar-active" class="close-sidebar-button">
+          <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+        </label>
+            
+        <!-- NOT IN TUTORIAL: The <a> tags are linked to the subpages -->
+        <a class="home-link" href="#">CirOS</a> 
+        <a >About</a> 
+        <a >Products</a>
+        <a   >Blog</a>
+        <a [routerLink]="['/login']" >Login</a>
+        
+      </div>
+    </nav>
+  
+    
+  </body>
