Primera version apartado Perfil

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
         <a class="home-link" href="#">CirOS</a> 
         <a [routerLink]="['/cPhone']">cPhone</a> 
         <a [routerLink]="['/cPad']">cPad</a>
-        <a  [routerLink]="['/cWatch']" >cWatch</a>
+        <a  [routerLink]="['/profile']" >Perfil</a>
         <a [routerLink]="['/login']" >Login</a>
         
       </div>
