--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -35,7 +35,21 @@
     color: #fff;
     cursor: pointer;
   }
+  #eliminarPerfil {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f00f35;
+    color: #fff;
+    cursor: pointer;
+  }
   
   button:hover {
     background-color: #3e8e41;
+  } 
+  #eliminarPerfil:hover {
+    background-color: #aa0722;
   }
