--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="perfil-container">
     <h2>Perfil de {{ usuario.nombre }} {{ usuario.apellido }}</h2>
-    <button (click)="eliminarPerfil()">Eliminar perfil</button>
+    <button id="eliminarPerfil" (click)="eliminarPerfil()">Eliminar perfil</button>
     <button (click)="modificarPerfil()">Modificar perfil</button>
     
     <div *ngIf="modificar">
