--- a/src/app/components/users/profile/profile.component.css
+++ b/src/app/components/users/profile/profile.component.css
@@ -1,55 +1,92 @@
-.perfil-container {
-    width: 50%;
-    margin: 40px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.head{
+    background-color: #4e4d4d;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.head button{
+    background-color: #017bab;
+    color: white;
+    border: none;
+    margin: 10px 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+
+.mainContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+  
+  /* Estilo para el contenedor del formulario */
+  .form {
+    width: 400px;
+    background: #4e4d4d;
+    box-shadow: 7px 13px 37px #000;
+    padding: 20px 30px;
+    border-top: 4px solid #017bab;
+    color: white;
+    text-align: center;
+  }
+
+  /*arreglar despues*/
+  .form form{
+    overflow: hidden;
   }
   
-  form {
+  /* Estilo para el título del formulario */
+  h2 {
+    margin: 0 0 30px;
+    font-size: 24px;
+  }
+  
+  /* Estilo para los campos de entrada del formulario */
+  .form .form-control {
+    width: 100%;
+    border: 1px solid #017bab;
+    background: #252323;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px;
+  }
+  
+  /* Estilo para el botón de enviar */
+  .form button {
+    width: 100%;
+    height: 40px;
+    background: #017bab;
+    border: none;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-bottom: 16px;
+  }
+  
+  /* Estilo para el párrafo de la parte inferior del formulario */
+  .form p {
     margin-top: 20px;
+    font-size: 14px;
   }
   
-  label {
-    display: block;
-    margin-bottom: 10px;
+  /* Estilo para el enlace en el párrafo */
+  .form a {
+    color: white;
+    text-decoration: none;
   }
   
-  input[type="text"], input[type="email"], input[type="password"] {
-    width: 100%;
-    height: 40px;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-  }
-  
-  button {
-    width: 100%;
-    height: 40px;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #4CAF50;
-    color: #fff;
-    cursor: pointer;
-  }
-  #eliminarPerfil {
-    width: 100%;
-    height: 40px;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #f00f35;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #3e8e41;
-  } 
-  #eliminarPerfil:hover {
-    background-color: #aa0722;
+  .form a:hover {
+    text-decoration: underline;
   }
