--- a/src/app/components/users/profile/profile.component.html
+++ b/src/app/components/users/profile/profile.component.html
@@ -1,28 +1,30 @@
-<div class="perfil-container">
+<div class="main-container">
+  <div class="head">
     <h2>Perfil de {{ usuario.nombre }} {{ usuario.apellido }}</h2>
-    <button id="eliminarPerfil" (click)="eliminarPerfil()">Eliminar perfil</button>
     <button (click)="modificarPerfil()">Modificar perfil</button>
-    
-    <div *ngIf="modificar">
-      <form [formGroup]="formulario">
-        <label>Nombre:</label>
-        <input formControlName="nombre" type="text">
-        <br>
-        <label>Apellido:</label>
-        <input formControlName="apellido" type="text">
-        <br>
-        <label>Email:</label>
-        <input formControlName="email" type="email">
-        <br>
-        <label>Contraseña:</label>
-        <input formControlName="contrasenia" type="password">
-        <br>
-        <label>Dirección:</label>
-        <input formControlName="direccion" type="text">
-        <br>
-        <button (click)="cancelar()">Cancelar</button>
-        <button (click)="guardar()">Guardar</button>
-      </form>
-    </div>
+    <button id="eliminarPerfil" (click)="eliminarPerfil()">Eliminar perfil</button>
   </div>
+  
+  <div *ngIf="modificar" class="form">
+    <form [formGroup]="formulario" >
+      <label>Nombre:</label>
+      <input formControlName="nombre" type="text" class="form-control">
+      <br>
+      <label>Apellido:</label>
+      <input formControlName="apellido" type="text" class="form-control">
+      <br>
+      <label>Email:</label>
+      <input formControlName="email" type="email" class="form-control">
+      <br>
+      <label>Contraseña:</label>
+      <input formControlName="contrasenia" type="password" class="form-control">
+      <br>
+      <label>Dirección:</label>
+      <input formControlName="direccion" type="text" class="form-control">
+      <br>
+      <button (click)="cancelar()">Cancelar</button>
+      <button (click)="guardar()">Guardar</button>
+    </form>
+  </div>
+</div>
   
