--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,8 +15,8 @@
         <a [routerLink]="['/cPhone']">cPhone</a> 
         <a [routerLink]="['/cPad']">cPad</a>
         <a  [routerLink]="['/cWatck']" >cWatch</a>
-        <a *ngIf="!loggedIn" [routerLink]="['/login']" >Login</a>
-        <a *ngIf="loggedIn" [routerLink]="['/profile']" >Mi Perfil</a>
+        <a *ngIf="!authService.loggedIn()" [routerLink]="['/login']" >Login</a>
+        <a *ngIf="authService.loggedIn()" [routerLink]="['/profile']" >Mi Perfil</a>
         
       </div>
     </nav>
