--- a/src/app/components/users/login/login.component.html
+++ b/src/app/components/users/login/login.component.html
@@ -2,6 +2,7 @@
     <div class="mainContainer">
         <div class="form">
             <h2>Login</h2>
+            <strong><p *ngIf="unauth" id="error">Usuario o contaseña incorrectos</p></strong>
             <form [formGroup]="formLog" (ngSubmit)="log()">
                 <div>
                   <input 
