empece la homepage

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,57 @@
-<section></section>
+<section class="home">
+    <div class="producto" id="phone">
+        <a [routerLink]="['/cPhone']" class="link-producto">
+            <div class="general-wrapper">
+                <div class="top-wrapper">
+                    <h2 class="head">cPhone Max</h2>
+                    <p class="subhead">Viví al máximo</p>
+                </div>
+                <div class="bottom-wrapper">
+                    <a [routerLink]="['/cPhone']" class="home-buttons">
+                        Conoce más
+                    </a>
+                    <a class="home-buttons">
+                        Comprar
+                    </a>
+                </div>
+            </div>    
+        </a>
+    </div>
+    <div class="producto">
+        <a [routerLink]="['/cWatch']" class="link-producto">
+            <div class="general-wrapper">
+                <div class="top-wrapper">
+                    <h2 class="head">cWatch</h2>
+                    <p class="subhead">No pierdas el tiempo.</p>
+                </div>
+                <div class="bottom-wrapper">
+                    <a [routerLink]="['/cWatch']" class="home-buttons">
+                        Conoce más
+                    </a>
+                    <a class="home-buttons">
+                        Comprar
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="producto">
+        <a [routerLink]="['/cPad']" class="link-producto">
+            <div class="general-wrapper">
+                <div class="top-wrapper">
+                    <h2 class="head">cPad Pro</h2>
+                    <p class="subhead">Practico, Estetico, Siempre.</p>
+                </div>
+                <div class="bottom-wrapper">
+                    <a [routerLink]="['/cPad']" class="home-buttons">
+                        Conoce más
+                    </a>
+                    <a class="home-buttons">
+                        Comprar
+                    </a>
+                </div>
+            </div>    
+        </a>
+
+    </div>
+</section>
