--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         <a class="home-link" href="#">CirOS</a> 
         <a [routerLink]="['/cPhone']">cPhone</a> 
         <a [routerLink]="['/cPad']">cPad</a>
-        <a  [routerLink]="['/cWatck']" >cWatch</a>
+        <a  [routerLink]="['/cWatch']" >cWatch</a>
         <a *ngIf="!authService.loggedIn()" [routerLink]="['/login']" >Login</a>
         <a *ngIf="authService.loggedIn()" [routerLink]="['/profile']" >Mi Perfil</a>
         
