modifique la homepage y algunas cosas del navbar

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home">
     <div class="producto" id="phone">
-        <a [routerLink]="['/cPhone']" class="link-producto">
+        <div class="global-wrapper">
             <div class="general-wrapper">
                 <div class="top-wrapper">
                     <h2 class="head">cPhone Max</h2>
@@ -14,44 +14,48 @@
                         Comprar
                     </a>
                 </div>
-            </div>    
-        </a>
+            </div>
+            <div>
+                <img src="../../../assets/img/white-smartphone-mockup-blank-screen-isolated-on-transparent-background-smartphone-mockup-frame-free-png.webp" alt="celu" height="500px" width="500px">
+            </div>
+        </div>
     </div>
     <div class="producto">
         <a [routerLink]="['/cWatch']" class="link-producto">
-            <div class="general-wrapper">
-                <div class="top-wrapper">
-                    <h2 class="head">cWatch</h2>
-                    <p class="subhead">No pierdas el tiempo.</p>
-                </div>
-                <div class="bottom-wrapper">
-                    <a [routerLink]="['/cWatch']" class="home-buttons">
-                        Conoce más
-                    </a>
-                    <a class="home-buttons">
-                        Comprar
-                    </a>
-                </div>
+        <div class="general-wrapper" id="watch">
+            <div class="top-wrapper">
+                <h2 class="head">cWatch</h2>
+                <p class="subhead">No pierdas el tiempo.</p>
             </div>
+            <div class="bottom-wrapper">
+                <a [routerLink]="['/cWatch']" class="home-buttons">
+                    Conoce más
+                </a>
+                <a class="home-buttons">
+                    Comprar
+                </a>
+            </div>
+        </div>
         </a>
+        
     </div>
     <div class="producto">
         <a [routerLink]="['/cPad']" class="link-producto">
-            <div class="general-wrapper">
-                <div class="top-wrapper">
-                    <h2 class="head">cPad Pro</h2>
-                    <p class="subhead">Practico, Estetico, Siempre.</p>
-                </div>
-                <div class="bottom-wrapper">
-                    <a [routerLink]="['/cPad']" class="home-buttons">
-                        Conoce más
-                    </a>
-                    <a class="home-buttons">
-                        Comprar
-                    </a>
-                </div>
-            </div>    
-        </a>
+        <div class="general-wrapper" id="pad">
+            <div class="top-wrapper">
+                <h2 class="head">cPad Pro</h2>
+                <p class="subhead">Practico, Estetico, Siempre.</p>
+            </div>
+            <div class="bottom-wrapper">
+                <a [routerLink]="['/cPad']" class="home-buttons">
+                    Conoce más
+                </a>
+                <a class="home-buttons">
+                    Comprar
+                </a>
+            </div>
+        </div>
+        </a>    
 
     </div>
 </section>
