--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<navbar></navbar>
-<router-outlet></router-outlet>
+<navbar id="navbar"></navbar>
+<div id="container">
+    <router-outlet></router-outlet>
+</div>
