--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,5 @@
+
+
 .home{
     width: 100%;
     grid-gap: 12px;
@@ -13,10 +15,17 @@ div {
 
 div.producto{
     width: 100%;
-    height: 500px;
+    height: 600px;
     position: relative;
 }
 
+.global-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
 
 a.link-producto {
     bottom: 0;
@@ -28,7 +37,10 @@ a.link-producto {
 } 
 
 div.top-wrapper{
-    text-align: center;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 h2.head{
@@ -36,6 +48,7 @@ h2.head{
     line-height: 1.07143;
     font-weight: 600;
     letter-spacing: -.005em;
+    color: #000;
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
@@ -46,20 +59,25 @@ p.subhead{
     letter-spacing: .007em;
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     margin-top: 6px;
+    color: #000;
 }
 
 div.general-wrapper{
     padding-bottom: 42px;
     height: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 div.bottom-wrapper{
-    text-align: center;
-    margin: 10px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    width: 300px;
+    justify-content: space-evenly;
+
 }
 
 a.home-buttons{
@@ -79,17 +97,11 @@ a.home-buttons{
     padding-right: 21px;
     padding-top: 11px;
     padding-bottom: 11px;
-    margin-left: 5px;
-    margin-right: 5px;
     border-radius: 980px;
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 }
 
 #phone{
-    background-color: rgb(251, 207, 40);
-    background-image: radial-gradient(circle, rgba(126, 89, 252, 1) 0%, rgba(0, 0, 0, 1) 66%);
-    background-size: auto;
-    background-position: left top;
-    background-repeat: repeat;
+    background-color: ghostwhite;
 }
