--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,4 +1,3 @@
-
 :root{
   --color-1: #0f1016;
   --text-color: #f0f0f0;
@@ -10,14 +9,17 @@
 }
 html{
   font-size: 12pt;
-  font-family: Poppins, Segoe UI, Tahoma, sans-serif;
+  font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+
 }
 nav{
   height: 60px;
-  background-color: var(--color-1);
+  background-color: #fff;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  position: sticky;
+  top: 0;
 }
 .links-container{
   height: 100%;
@@ -26,13 +28,13 @@ nav{
   flex-direction: row;
   align-items: center;
 }
-nav a{
+a{
   height: 100%;
   padding: 0 20px;
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--text-color);
+  color: #000;
 }
 nav a:hover{
   background-color: var(--accent-color);
