--- a/src/app/components/users/profile/profile.component.css
+++ b/src/app/components/users/profile/profile.component.css
@@ -6,11 +6,11 @@
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
-    border-top: 4px solid #017bab;
+    border-top: 4px solid #0071e3;
 }
 
 .head button{
-    background-color: #017bab;
+    background-color: #0071e3;
     color: white;
     border: none;
     margin: 10px 20px;
@@ -33,7 +33,7 @@ section{
     background: #4e4d4d;
     box-shadow: 7px 13px 37px #000;
     padding: 20px 30px;
-    border-top: 4px solid #017bab;
+    border-top: 4px solid #0071e3;
     color: white;
     text-align: center;
   }
@@ -52,7 +52,7 @@ section{
   /* Estilo para los campos de entrada del formulario */
   .form .form-control {
     width: 100%;
-    border: 1px solid #017bab;
+    border: 1px solid #0071e3;
     background: #252323;
     color: white;
     font-size: 14px;
