--- a/src/app/components/users/signin/signin.component.css
+++ b/src/app/components/users/signin/signin.component.css
@@ -13,7 +13,7 @@
     background: #4e4d4d;
     box-shadow: 7px 13px 37px #000;
     padding: 20px 30px;
-    border-top: 4px solid #017bab;
+    border-top: 4px solid #0071e3;
     color: white;
     text-align: center;
   }
@@ -32,7 +32,7 @@
   /* Estilo para los campos de entrada del formulario */
   .form .form-control {
     width: 100%;
-    border: 1px solid #017bab;
+    border: 1px solid #0071e3;
     background: #252323;
     color: white;
     font-size: 14px;
@@ -46,7 +46,7 @@
   .form button {
     width: 100%;
     height: 40px;
-    background: #017bab;
+    background: #0071e3;
     border: none;
     color: white;
     font-size: 14px;
