--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,6 @@
 * {
     margin: 0;
     padding: 0;
-    
+    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+
 }
