--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,7 @@
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 }
+
+html{
+    overflow-x: hidden;
+}
