--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -103,7 +103,11 @@ a.home-buttons{
     padding-bottom: 11px;
     border-radius: 980px;
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    transition: transform 0.3s ease-in-out;
+}
 
+a.home-buttons:hover{
+    transform: scale(1.05) !important;
 }
 
 #cphone{
@@ -129,3 +133,5 @@ background-image: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255,
 #pad{
     transform: rotate(90deg);
 }
+
+
