--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="home">
+<section class="main">
     <div class="producto" id="cphone">
         <div class="global-wrapper">
             <div>
