empezamos el carrito

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
                     <a [routerLink]="['/cPhone']" class="home-buttons">
                         Conoce más
                     </a>
-                    <a class="home-buttons">
+                    <a [routerLink]="['/buyPhone']" class="home-buttons">
                         Comprar
                     </a>
                 </div>
@@ -28,10 +28,10 @@
                     <p class="subhead" id="Hreloj">No pierdas el tiempo.</p>
                 </div>
                 <div class="bottom-wrapper">
-                    <a [routerLink]="['/cPhone']" class="home-buttons">
+                    <a [routerLink]="['/cWatch']" class="home-buttons">
                         Conoce más
                     </a>
-                    <a class="home-buttons">
+                    <a [routerLink]="['/buyWatch']" class="home-buttons">
                         Comprar
                     </a>
                 </div>
@@ -52,10 +52,10 @@
                     <p class="subhead">Del tamaño de una mano.</p>
                 </div>
                 <div class="bottom-wrapper">
-                    <a [routerLink]="['/cPhone']" class="home-buttons">
+                    <a [routerLink]="['/cPad']" class="home-buttons">
                         Conoce más
                     </a>
-                    <a class="home-buttons">
+                    <a [routerLink]="['/buyPad']" class="home-buttons">
                         Comprar
                     </a>
                 </div>
