--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -10,7 +10,7 @@
                 <p class="product-price"></p>
               </div>
           </div>
-          <div id="wallet_container"></div>
         </div>
+        <button type="submit" (click)="generarPago()">Comprar</button>
       </div>
 </section>
