--- a/src/app/components/users/profile/profile.component.css
+++ b/src/app/components/users/profile/profile.component.css
@@ -1,92 +1,179 @@
-.head{
-    background-color: #4e4d4d;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    border-top: 4px solid #0071e3;
+.head {
+  background-color: #4e4d4d;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  border-top: 4px solid #0071e3;
 }
 
-.head button{
-    background-color: #0071e3;
-    color: white;
-    border: none;
-    margin: 10px 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
+.head button {
+  background-color: #0071e3;
+  color: white;
+  border: none;
+  margin: 10px 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-
-
-section{
+section {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-  
-  /* Estilo para el contenedor del formulario */
-  .form {
-    width: 400px;
-    background: #4e4d4d;
-    box-shadow: 7px 13px 37px #000;
-    padding: 20px 30px;
-    border-top: 4px solid #0071e3;
-    color: white;
-    text-align: center;
-  }
 
-  /*arreglar despues*/
-  .form form{
-    overflow: hidden;
-  }
-  
-  /* Estilo para el título del formulario */
-  h2 {
-    margin: 0 0 30px;
-    font-size: 24px;
-  }
-  
-  /* Estilo para los campos de entrada del formulario */
-  .form .form-control {
-    width: 100%;
-    border: 1px solid #0071e3;
-    background: #252323;
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 4px;
-  }
-  
-  /* Estilo para el botón de enviar */
-  .form button {
-    width: 100%;
-    height: 40px;
-    background: #017bab;
-    border: none;
-    color: white;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
-    margin-bottom: 16px;
-  }
-  
-  /* Estilo para el párrafo de la parte inferior del formulario */
-  .form p {
-    margin-top: 20px;
-    font-size: 14px;
-  }
-  
-  /* Estilo para el enlace en el párrafo */
-  .form a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .form a:hover {
-    text-decoration: underline;
-  }
+.configurator {
+  background: #4e4d4d;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 4px solid #0071e3;
+  color: white;
+  text-align: center;
+  width: 100%;
+  max-width: 500px; /* Ajustar para que no sea demasiado ancho */
+}
+
+.configurator h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  font-weight: bold;
+  color: white;
+  font-size: 16px;
+  display: block;
+}
+
+.form-group select, .form-group input {
+  width: 100%;
+  padding: 10px;
+  background: #252323;
+  border: 1px solid #0071e3;
+  border-radius: 4px;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.form-group select {
+  -webkit-appearance: none;  /* Quitar la apariencia por defecto del select */
+  -moz-appearance: none;     /* Para Firefox */
+  appearance: none;          /* Para otros navegadores modernos */
+  background-color: #252323;
+  background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="7" height="4" viewBox="0 0 7 4"%3E%3Cpath fill="none" stroke="%23ffffff" d="M0 0l3.5 3 3.5-3"%3E%3C/path%3E%3C/svg%3E'); /* Añadir ícono de flecha */
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+}
+
+.form-group input[type="number"] {
+  -moz-appearance: textfield; /* Eliminar flechas de números */
+}
+
+.form-group input[type="number"]::-webkit-outer-spin-button,
+.form-group input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+  background-color: #0071e3;
+  color: white;
+  border: none;
+  margin: 10px 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #005f9f; /* Cambio de color al pasar el mouse */
+}
+
+button:focus {
+  outline: none; /* Eliminar el borde de enfoque por defecto */
+}
+
+/* Estilo para los formularios adicionales */
+.form {
+  width: 400px;
+  background: #4e4d4d;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 4px solid #0071e3;
+  color: white;
+  text-align: center;
+}
+
+.form form {
+  overflow: hidden;
+}
+
+h2 {
+  margin: 0 0 30px;
+  font-size: 24px;
+}
+
+.form .form-control {
+  width: 100%;
+  border: 1px solid #0071e3;
+  background: #252323;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+}
+
+.form button {
+  width: 100%;
+  height: 40px;
+  background: #017bab;
+  border: none;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
+
+.form p {
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+.form a {
+  color: white;
+  text-decoration: none;
+}
+
+.form a:hover {
+  text-decoration: underline;
+}
+
+.submit-btn {
+  width: 100%;
+  height: 40px;
+  background: #017bab;
+  border: none;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-top: 16px;
+  margin-left: -0.5%;
+}
+
+.submit-btn:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
