--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,16 +1,18 @@
-<section>
-    <div class="product-banner">
-        <h2 class="banner-title">Carrito</h2>
-        <div class="product-grid">
-          <div *ngFor="let producto of productos">
-            <img [alt]="getImageAlt(producto.type)" [src]="getImageSrc(producto.type)" class="product-image" />
-              <div class="product-info">
-                <h3 class="product-name"></h3>
-                <p class="product-description">{{producto.color}}, {{producto.ram}}, {{producto.storage}}</p>
-                <p class="product-price"></p>
-              </div>
-          </div>
+
+
+<section class="cart-section">
+  <div class="product-banner">
+    <h2 class="banner-title">Carrito</h2>
+    <div class="product-grid">
+      <div *ngFor="let producto of productos" class="product-card">
+        <img [alt]="getImageAlt(producto.type)" [src]="getImageSrc(producto.type)" class="product-image" />
+        <div class="product-info">
+          <h3 class="product-name">{{ getProductName(producto.type) }}</h3>
+          <p class="product-description">{{producto.color}}, {{producto.ram}}, {{producto.storage}}</p>
+          <p class="product-price">{{producto.price | currency}}</p>
         </div>
-        <button type="submit" (click)="generarPago()">Comprar</button>
       </div>
+    </div>
+    <button type="submit" class="buy-button" (click)="generarPago()">Comprar</button>
+  </div>
 </section>
