--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -9,6 +9,9 @@
 
 .product-banner {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .banner-title {
@@ -87,4 +90,26 @@
 
 .buy-button:hover {
   background-color: #0051cc;
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: flex-end
+}
+
+.button-wrapper > button{
+  margin: 10px; 
+  transition: 0.5s; 
+}
+
+.button-wrapper > button:hover{
+  scale: 1.2 !important; 
+}
+
+.bottom-wrapper{
+  display: flex; 
+  width: 500px;
+  justify-content: space-evenly; 
+  align-items: center; 
+  margin-top: 20px; 
 }
